styles.css
@font-face {
    font-family: 'Helvetica Neue Light';
    src: url(fonts/HelveticaNeue-Light.woff);
    src: url(fonts/HelveticaNeue-Light.woff2);
}

@font-face {
    font-family: 'Helvetica Neue Bold';
    src: url(fonts/HelveticaNeue-Bold.woff);
    src: url(fonts/HelveticaNeue-Bold.woff2);
}

@font-face {
    font-family: 'Helvetica Neue Medium';
    src: url(fonts/HelveticaNeue-Medium.woff);
    src: url(fonts/HelveticaNeue-Medium.woff2);
}

main {
    padding-top: 20px;
    padding-left: 10%;
    width: 90%;
}

h1 {
    font-family: 'Caudex', serif;
    font-size: 1.5rem;
}

h2 {
    font-family: 'Caudex', serif;
    font-size: 2.5rem;
    margin-bottom: 0px;
}

h3 {
    font-family: 'Caudex', serif;;
    font-size: 1.5rem;
}

body {
    font-family: 'Helvetica Neue Light';
    font-weight: 100;
    background-color: #ecebea;
    color: #111111;
    font-size: 1.5rem;
    width: 90%;
    margin: auto;
}

li {
    list-style: square;
    color: #111111;
}

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }


a {
    text-decoration: none;
    padding: 0%;
}

a:visited{
    color: #111111;
}

p {
    margin: 0%;
}

ul {
    list-style: none;
    margin: 0%;
    padding: 0%;
}

a.button{
    display: inline-block;
    border: 1px solid #111111 !important;
    font-size: 1em;
    letter-spacing: 0.1px;
    border-radius: 8px;
    padding: 5px 7px;
    transition: all ease 0.15s;
    margin-bottom: 3px;
    color: #111111;
}

a.button:hover{
    border: .75px solid #111111 !important;
    font-size: 1em;
}



.logo {
    width: 15%;
    max-width: 250px;
    margin-left: 180px;
    margin-top: 20px;
  }
  
.logo img {
    width: 100%;
    pointer-events: none; 
  }
  
.nav-links {
    display: flex;
    width: 60%;
  }

.nav-links li {
    margin-right: 20px;
    list-style: none;
  }
  
.nav-links li:last-child {
    margin-right: 0;
  }
  
.nav-links a {
    display: flex;
    align-items: center;
    padding: 5px;
    width: 40px;
    height: 40px;
  }
  
.nav-links img {
    width: 35px;
  }

.wrapper {
    display: inline-block;
    white-space: nowrap;
  }

.header-img{
    width: 50%;
    margin: auto;
}

.filter-button {
    display: flex;
    justify-content: end;
}

.dropbtn {
    font-family: 'Helvetica Neue Light';
    background-color: transparent;
    color: #111111;
    display: inline-block;
    border: 1px solid rgba(0, 0, 0, .25);
    font-size: 0.75em;
    letter-spacing: 0.1px;
    border-radius: 8px;
    padding: 5px 7px;
    transition: all ease 0.15s;
    margin-bottom: 20px;

}

.dropbtn:hover,
.dropbtn:focus {
    border: .75px solid #111111;
}

.dropdown {
    width: 100%;
    position: relative;
    display: inline-block;
}

.dropdown-content {
    display: none;
    font-size: 0.75em;
    position: absolute;
    right: 0px;
    background-color: #fcfcfc;
    min-width: 160px;
    overflow: auto;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 1;
}

.dropdown-content a {
    color: #111111;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

.dropdown a:hover {
    text-decoration: underline;
}

.filterDiv {
    display: none;
}

.index-list a {
    display: grid;
    grid-template-columns: minmax(3em, 2fr) minmax(6em, 3fr) minmax(5em, 2fr) 1fr;
    align-items: baseline;
    column-gap: 1em;
    padding: .5em 0em;
    color: #111111;
}

.index-list {
    border-top: .75px solid rgba(0, 0, 0, .25);
    margin-top: 2em;
    line-height: inherit;
}

.accordion_container {
    max-width: 100%;
    border-bottom: 1px solid rgba(0, 0, 0, .25) !important;
}

.accordion_head {
    color: #111111;
    cursor: pointer;
    margin: 0%;
}

.accordion_head a:hover {
    background-color: #111111;
    color: #fcfcfc;
}

.accordion_body {
    border-top: .75px solid #111111;
    padding-bottom: 20px;
    font-size: 1rem;
}

.accordion_body p {
    padding: 18px 5px;
    margin: 0px;
    font-size: 1.5rem;
}

.index-head {
    padding-top: 10px;
    padding-bottom: 50px;
}


.show {
    display: block;
}


#email{
    font-family: 'Helvetica Neue Bold';
}

#email-icon {
    position: relative;
    cursor: pointer;
  }
  
#email-box {
    position: absolute;
    margin-left: 220px;
    top: 100px;
    background-color: #000;
    padding: 10px;
    border-radius: 10px;
    display: none;
  }
  
#email-box p {
    margin: 0;
    font-family: 'Caudex', serif;
    font-size: 1rem;
    color: #ecebea;
  }

#cor {
    display: flex;
    flex-wrap: wrap;
    align-items: flex-start;
    margin-left: 20px;
  }
  
#left img {
    width: 100%;
    max-width: 400px;
    margin-right: 20px;
    margin-bottom: 20px;
  }
  
#left iframe {
    width: 100%;
    max-width: 400px;
    margin-right: 20px;
    margin-bottom: 20px;
    height: 300px;
  }
  
#cor p {
    flex: 1;
    font-family: 'Helvetica Neue Light';
    font-size: 1.3rem;
    text-align: justify;
    text-justify: auto;
  }

#left {
    width: 30%;
    display: inline-block;
    flex-wrap: wrap;
    align-items: center;
  }
  
@media only screen and (max-width: 600px) {
    main {
        padding-left: 2.5%;
        font-size: 1rem;
    }

    nav {
        max-width: 100%;
    }

    body {
        max-width: 100%;
        margin: auto;
        letter-spacing: .05rem;
        padding: 5px;
        font-size: 1rem;
    }

    a {
        text-decoration: none;
        padding: 10%;
    }

    a.button {
        font-size: 0.7rem;
    }

    h2 {
        font-size: 1.2rem;
      }
      
    h3 {
        font-size: 0.8rem;
      }  

    .logo {
        width: 35%;
        margin-left: 20px;
        margin-top: 10px;
        margin-right: 20px;
      }

    .nav-links img {
        height: 23px;
        width: 23px;
      }

    .nav-links li {
        margin: 5px 0;
      }

    .nav-links a {
        display: flex;
        align-items: center;
        padding: 2px;
      }

    .accordion_head {
        font-size: 0.8rem;
    }

    .accordion_body p {
        font-size: 0.9rem;
    }

    #cor {
        display: block;
    }

    #cor p {
        margin-left: 0px;
        text-align: left;
    }

    #left img {
        width: 100%;
        height: auto;
        max-width: 320px;
        margin-right: 20px; 
        margin-bottom: 20px;
    }
      
    #left iframe {
        width: 100%;
        max-width: 320px;
        margin-right: 20px;
        margin-bottom: 20px;
        height: 20%;
      }

    #left {
        display: flex;
        flex-direction: row;
        width: 100%
    }

    #email-box {
        position: absolute;
        margin-left: 22%;
        top: 50px;
        background-color: #000;
        padding: 7px;
        border-radius: 10px;
        display: none;
      }

      #email-box p {
        font-size: 0.65rem;
      }

    #cor p {
        font-size: 1.2rem;
    }
}

